tests/tooling/fixtures/native/recovery/negative/neg_param_type_generic.objc3
// Negative fixture: generic parameter suffix on non-object-pointer parameter type is unsupported.
// Expected diagnostic code(s): O3S206.
module NegativeGenericParamType;

fn passthrough(value: Box<i32>) -> i32 {
  return 1;
}

fn main() -> i32 {
  return passthrough(1);
}
